Add Typescript dependencies and config

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "Download Player",
   "type": "module",
   "author": "FedYou",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^24.10.0"
+  }
 }
