--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Download Player",
   "type": "module",
+  "bin": {
+    "dlp": "./bin/dlp"
+  },
   "author": "FedYou",
   "license": "MIT",
   "devDependencies": {
