chore: add aliases in the Typescript config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "utils/*": ["src/utils/*"],
+      "global/*": ["src/global/*"],
+      "types/*": ["types/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src", "types"]
 }
