--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
+      "components/*": ["src/components/*"],
       "utils/*": ["src/utils/*"],
       "global/*": ["src/global/*"],
       "types/*": ["types/*"]
