--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "dlp",
   "version": "0.0.1",
   "description": "Download Player",
@@ -8,11 +9,15 @@
   },
   "author": "FedYou",
   "license": "MIT",
+  "workspaces": [
+    "core"
+  ],
   "devDependencies": {
     "@types/blessed": "^0.1.25",
     "@types/node": "^24.10.0"
   },
   "dependencies": {
-    "blessed": "^0.1.81"
+    "blessed": "^0.1.81",
+    "dlp-core": "workspace:*"
   }
 }
