--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dlp": "./bin/dlp"
   },
   "scripts": {
-    "pull:core": "git subtree pull --prefix=core/ https://github.com/FedYou/dlp-core main --squash",
-    "compile": "bun run scripts/compile.ts"
+    "pull:core": "git subtree pull --prefix=core/ https://github.com/FedYou/dlp-core main --squash"
   },
   "author": "FedYou",
   "license": "MIT",
