--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   ],
   "devDependencies": {
     "@types/blessed": "^0.1.25",
-    "@types/node": "^24.10.0"
+    "@types/node": "^24.10.0",
+    "esbuild": "^0.27.1"
   },
   "dependencies": {
     "blessed": "^0.1.81",
