chore: change package name to dlp-cli

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dlp",
+  "name": "dlp-cli",
   "version": "0.0.1",
   "description": "Download Player",
   "homepage": "https://github.com/FedYou/dlp",
