--- a/package.json
+++ b/package.json
@@ -13,6 +13,27 @@
   },
   "author": "FedYou",
   "license": "MIT",
+  "keywords": [
+    "yt-dlp",
+    "aria2",
+    "ffmpeg",
+    "video",
+    "audio",
+    "mp4",
+    "mp3",
+    "webm",
+    "download",
+    "media",
+    "fedyou",
+    "cli",
+    "tui",
+    "flash",
+    "player",
+    "easy",
+    "youtube",
+    "tiktok",
+    "instagram"
+  ],
   "workspaces": [
     "core"
   ],
